-Added typing animation to the About section. Credit to: https://css-tricks.com/snippets/css/typewriter-effect/
-Added, then reverted margin of the horizontal body of the website as it was causing issues when screen size was larger than 1440px.
-Added spinner, currently acting as button on about page


Fixed:
-Image slideshow buttons not moving when resizing webpage
-External link spacing




Todo:
-Add an ascii image on the main page
~~-Figure out how to add spinner for the hardware title on about page~~
-Add margins for left and right of website contents
-Possibly convert click to spin button on about page to just run when page is loaded
-Change links that should be buttons to buttons.

Wed, Jun 18
-----------

Changed:
-Added scrolling interests bar
-Added headshot, and re-arranged index.html page


Fixed:
-Having multiple active spinners at once in about section

Broke:
-Hardware image is now overlapping the summary and text after setting margin to auto for the body of all pages
-Scrolling skills/interests bar is cut off at bottom

TODO:



Fri, Jun 20
Changed:
-Fixed project image slideshow overlapping. Added test wrapping on small screens

Mon Jun 23
----------

Changed:
-Added new directory for Project planning, and additional images
-Started work on node.js functionality.
-

Fixed:


Broke:

TODO:
-Add footer to all pages
-add temperature functionality


Tue Jun 24
----------

Changed:

Commit 1
--------

-Added real time temperatures on home page
-Added projects on the "Both" page
-Removed "Both" Link from the navigation bar, as I have decided to just have Hardware and Software section.
-Removed blinking carat from about section
-Added 2nd project to hardware projects, changed logic for slideshow as multiple were showing at once
-Added sigrok logo to slideshow, Javascript, re-organized icons.



TODO:
-Make carousal repeat instead of resetting
-Update links on hardware page
-Add page dedicated to making the website itself