@@ -126,8 +126,6 @@ div{
               <div class="refs">
               <a href="https://youtube.com/playlist?list=PLowKtXNTBypFbtuVMUVXNR0z1mu7dp7eH&si=-x86MyVejjAb9HX_">Ben Eater's Video Series</a>
               <a href="Ext_files/6502 Gerber Files/">PCB design (Gerber files)</a>
-              <a>another link</a>
-              <a> I am once again another link</a>
               
               </div>
 
@@ -176,13 +174,13 @@ div{
 
               <ul>
                 <li>
-                Built 6502-microprocessor based computer on breadboards, later being translated to a PCB.
+                Referenced datasheet in order to write C++ code to communicate with the BMP180 sensor via I2C.
                 </li>
                 <li>
-                Referenced wiring diagrams as well as creating logic diagrams while building. Used oscilloscope as well as EEPROM programmer to debug.
+                Used a logic analyzer in order to debug I2C communication while referencing the datasheet and known good examples.
                 </li>
                 <li>
-                Enhanced knowledge of computer architecture, assembly, I/O, Binary and Hexadecimal. 
+                Integrated WiFi communication to communicate with node.js server and post temperatures.
                 </li>
               </ul>
 
@@ -207,9 +205,8 @@ div{
 
               <div class="refs">
               <a href="https://cdn-shop.adafruit.com/datasheets/BST-BMP180-DS000-09.pdf">BMP180 Datasheet</a>
-              <a href="Ext_files/6502 Gerber Files/">PCB design (Gerber files)</a>
-              <a>another link</a>
-              <a> I am once again another link</a>
+              <a href="https://github.com/Jack-Dietrich/bmp180-library-project">GitHub Link</a>
+              <a href="https://sigrok.org/wiki/Main_Page">Sigrock</a>
               
               </div>
 
