@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="css/header.css"> 
 <link rel="stylesheet" href="css/footer.css"> 
 <link rel="stylesheet" href="css/main.css"> 
+<link rel="stylesheet" href="css/software.css"> 
+
+
 
 
 
@@ -77,13 +80,48 @@ div{
 
   </div>
 
-  <div class="section-2">
+
+    <h1>This website!</h1>
+  <div class="project">
+
+
+    <embed src="http://localhost:3000" style="width: 500px; height: 300px;">
+    <div class="description">
+
+      <h2>This is another header that spans</h2>
+  
+      <p>This is some paragraph that describes stuff about the website</p>
+      <ul>
+        <li>This is a list item</li>
+        <li>Another list item</li>
+      </ul>
+
+
+
+    </div>
+      
+    </div>
+
 
 
   </div>
 
 
+
+
+
+
+
+
+
+
 </div>
+
+
+
+
+
+
 
 <footer class="footer">
   
