@@ -98,6 +98,9 @@ Commit 1
 -Added 2nd project to hardware projects, changed logic for slideshow as multiple were showing at once
 -Added sigrok logo to slideshow, Javascript, re-organized icons.
 
+Commit 2
+--------
+-Beginning work on software page
 
 
 TODO:
